<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".LoginActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transperent_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

                <ImageView
                    android:id="@+id/img_email_icon"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/mail"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp" />

            <EditText
                android:id="@+id/txt_act_login_email"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_toRightOf="@+id/img_email_icon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

            <ImageView
                android:id="@+id/img_password_icon"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/password_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp" />

            <EditText
                android:id="@+id/txt_act_login_password"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_toRightOf="@+id/img_password_icon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/rounded_orange"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_user"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/btn_sign_up_new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/_30sdp"-->
                <!--android:layout_marginEnd="@dimen/_50sdp"-->
                <!--android:layout_marginStart="@dimen/_50sdp"-->
                <!--android:layout_marginTop="@dimen/_20sdp"-->
                <!--android:orientation="horizontal">-->

                <ImageView
                    android:id="@+id/btn_facebook_login"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="25"
                    android:src="@drawable/facebook" />

                <!--<ImageView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="25"-->
                    <!--android:src="@drawable/google_plus" />-->

                <!--<ImageView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="25"-->
                    <!--android:src="@drawable/instagram" />-->

                <!--<ImageView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="25"-->
                    <!--android:src="@drawable/twitter" />-->
            <!--</LinearLayout>-->

        </LinearLayout>

    </RelativeLayout>
</layout>