<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:background="@drawable/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:background="@color/transperent_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <ImageView
                android:id="@+id/img_user_icon"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/user_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp" />
        <EditText
            android:id="@+id/edt_full_name"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toRightOf="@+id/img_user_icon"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/full_name"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:id="@+id/img_email_icon"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/mail"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp" />
        <EditText
            android:id="@+id/edt_email"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toRightOf="@+id/img_email_icon"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/email_address"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:id="@+id/img_password_icon"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/password_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp" />
        <EditText
            android:id="@+id/edt_password"
            android:background="@android:color/transparent"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_toRightOf="@+id/img_password_icon"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"

            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />

        </RelativeLayout>

        <!--<TextView-->
            <!--android:id="@+id/txt_already_login"-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:layout_gravity="center"-->
            <!--android:textColor="@color/white"-->
            <!--android:text="Already Login? Here"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <TextView
            android:id="@+id/btn_register"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="@dimen/_12sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_orange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />

        <TextView
            android:id="@+id/txt_already_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="Already Login? Here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--<LinearLayout-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:weightSum="100"-->
            <!--android:layout_marginStart="@dimen/_50sdp"-->
            <!--android:layout_marginEnd="@dimen/_50sdp"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/_30sdp">-->

            <ImageView
                android:id="@+id/btn_facebook_register"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="25"
                android:src="@drawable/facebook" />
            <!--<ImageView-->
                <!--android:layout_weight="25"-->
                <!--android:src="@drawable/google_plus"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content" />-->
            <!--<ImageView-->
                <!--android:layout_weight="25"-->
                <!--android:src="@drawable/instagram"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content" />-->
            <!--<ImageView-->
                <!--android:layout_weight="25"-->
                <!--android:src="@drawable/twitter"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content" />-->
        <!--</LinearLayout>-->

    </LinearLayout>

</RelativeLayout>
</layout>